9 major todos left... we're slowly gettin there...